# AutoHypothesis

./: README.md  agent.py  program.md  pyproject.toml  results.tsv
best_agent/: best_holdback_agent.py  best_holdback_score.json  results.csv
results/: best_agent.py  results_momentum.csv
sample_results/: best_agent.py
